--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "express": "^4.17.1",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
+  },
+  "scripts": {
+    "start": "node index.js"
   }
 }
