--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Plataforma de perguntas e Respostas",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
   "author": "AndrewwMax",
   "license": "ISC",
@@ -12,10 +12,8 @@
     "body-parser": "^1.19.0",
     "ejs": "^3.1.5",
     "express": "^4.17.1",
+    "mongoose": "^5.11.4",
     "mysql2": "^2.2.5",
     "sequelize": "^6.3.5"
-  },
-  "scripts": {
-    "start": "node index.js"
   }
 }
